# document-scanner

./: CMakeLists.txt  README.md
inc/: common.h  main.h  scan.h
src/: Source.cpp  main.cpp  scan.cpp
